# yt-stream-chat-frequency-analysis

./: .gitignore  AGENTS.md  LICENSE  LICENSE-CC-BY-SA  README.md  interactive_chat_frequency.py  plot_chat_frequency.py  pyproject.toml  reduce_yt_chat_metadata.py  requirements.txt
research/: aggregate_metrics.csv  align_audio_mel.py  align_highlights.py  clean_markdown.py  clipping_research.md  overlap_analysis.py  run_chatfreq.py  visualize.py
research/gura-first-minecraft/: gura-first-minecraft_alignment.csv  gura-first-minecraft_frequency.csv  gura-first-minecraft_metrics.csv  gura-first-minecraft_per_bin.csv  gura-first-minecraft_region_coverage_z0.csv  gura-first-minecraft_region_coverage_z05.csv  gura-first-minecraft_regions_z0.csv  gura-first-minecraft_regions_z05.csv
research/gura-solo-minecraft0/: gura-solo-minecraft0_alignment.csv  gura-solo-minecraft0_frequency.csv  gura-solo-minecraft0_metrics.csv  gura-solo-minecraft0_per_bin.csv  gura-solo-minecraft0_region_coverage_z0.csv  gura-solo-minecraft0_region_coverage_z05.csv  gura-solo-minecraft0_regions_z0.csv  gura-solo-minecraft0_regions_z05.csv
research/nimi-retro-rewind/: nimi-retro-rewind_alignment.csv  nimi-retro-rewind_frequency.csv  nimi-retro-rewind_metrics.csv  nimi-retro-rewind_per_bin.csv  nimi-retro-rewind_region_coverage_z0.csv  nimi-retro-rewind_region_coverage_z05.csv  nimi-retro-rewind_regions_z0.csv  nimi-retro-rewind_regions_z05.csv
research/nimi-vampire/: nimi-vampire_alignment.csv  nimi-vampire_frequency.csv  nimi-vampire_metrics.csv  nimi-vampire_per_bin.csv  nimi-vampire_region_coverage_z0.csv  nimi-vampire_region_coverage_z05.csv  nimi-vampire_regions_z0.csv  nimi-vampire_regions_z05.csv
src/chatfreq/: __init__.py
src/chatfreq/cli/: __init__.py  commands.py  renderer.py
(+13 files in other folders)
