[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatfreq"
version = "1.0.0"
description = "Chat frequency analysis tool for video streams"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Author"}
]
keywords = ["chat", "frequency", "analysis", "video", "streaming", "twitch", "youtube"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "nltk>=3.8",
]

[project.optional-dependencies]
cli = [
    "click>=8.0.0",
]
web = [
    "dash>=2.0.0",
    "plotly>=5.0.0",
    "kaleido>=0.2.0",
]
all = [
    "click>=8.0.0",
    "dash>=2.0.0",
    "plotly>=5.0.0",
    "kaleido>=0.2.0",
    "matplotlib>=3.4.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
chatfreq = "chatfreq.cli.commands:cli"

[project.urls]
Homepage = "https://github.com/anomalyco/chatfreq"
Issues = "https://github.com/anomalyco/chatfreq/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
